prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_return_literal_mismatch.nut
// EXPECTED: compile-time error - return string from int function
function fn(): int {
    return "hello"
}
return fn
